--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "src"
 version = "0.1.0"
 description = ""
-authors = ["Chetan <chetanhalai3c@gmail.com>"]
+authors = ["sai <saiprakashtut@gmail.com>"]
 readme = "README.md"
 
 
